src/parser.py
import ply.yacc as yacc

from tokrules import tokens

from SymbolTable import SymbolTable
from SymbolTable import SymbolTableVariableEntry as VarEntry
from SymbolTable import SymbolTablePackageEntry as PackageEntry
from SymbolTable import SymbolTableInterfaceEntry as InterfaceEntry
from SymbolTable import SymbolTableStructEntry as StructEntry
from SymbolTable import SymbolTableFunctionEntry as FuncEntry
from SymbolTable import SymbolTableImportEntry as ImportEntry

from utils import symTableToCSV

symTableDict = {'rootSymTable': SymbolTable(None, 'rootSymTable')}
symTableSt = ['rootSymTable']
counter = 0
label_counter = 0

def newVar():
	global counter
	res = 't' + str(counter)
	counter += 1
	return res

def newLabel():
	global label_counter
	res = 'label' + str(label_counter)
	label_counter += 1
	return res

def verifyCalType(name, lineno):
	flag = False
	for n in symTableSt[::-1]:
		if name in symTableDict[n].symbols:
			flag = True
			table = symTableDict[n]
			break
	if not flag:
		print('Type of', name, 'not found on line number', lineno)
		return 'Unknown'
	entry = table.get(name)
	return entry.getType()


def p_empty(p):
	'empty :'
	pass

def p_keyword_lcurly(p):
	'''
	keyword_lcurly : LCURLY
	'''
	global symTableSt
	global symTableDict
	p[0] = {}
	p[0]['code'] = []
	key = "sym#" + str(p.lexer.lineno) + "#" + str(p.lexer.lexpos)
	symtab = SymbolTable(symTableSt[-1], key)
	symTableDict[key] = symtab
	symTableSt += [key]

def p_keyword_rcurly(p):
	'''
	keyword_rcurly : RCURLY
	'''
	global symTableSt
	global symTableDict
	p[0] = {}
	p[0]['code'] = []
	symTableSt = symTableSt[:-1]

def p_source_file(p):
	'''
	SourceFile  : PackageClause ImportDeclList TopLevelDeclList
	'''
	global symTableSt
	global symTableDict
	p[0] = {}
	p[0]['code'] = []
	p[0]['code'] = p[1]['code'] + p[2]['code'] + p[3]['code']
	print(symTableDict)
	for key in symTableDict:
	    symTableDict[key].prettyPrint()
	#import sys
	#sys.stdout = open('output.csv', 'w')
	#symTableToCSV(symTableDict)
	#file = open("output.code", "w")
	#for c in p[0]['code']:
	#    file.write(c + '\n')
	#p[0] = ''

def p_package_clause(p):
	'''
	PackageClause  : PACKAGE IDENTIFIER
	'''
	global symTableSt
	global symTableDict
	p[0] = {}
	p[0]['code'] = []
	scope = symTableSt[-1]
	symTable = symTableDict[scope]
	pkg = PackageEntry(p[2])
	if (symTable.put(pkg) == False):
	     print("Error:", p[2], "redeclared on line number", p.lexer.lineno)

def p_import_decl_list(p):
	'''
	ImportDeclList : ImportDecl ImportDeclList
	               | empty
	'''
	global symTableSt
	global symTableDict
	p[0] = {}
	p[0]['code'] = []

def p_import_decl(p):
	'''
	ImportDecl    : IMPORT ImportSpecTopList
	'''
	global symTableSt
	global symTableDict
	p[0] = {}
	p[0]['code'] = []

def p_import_spec_top_list(p):
	'''
	ImportSpecTopList : ImportSpec
	                  | LPAREN ImportSpecList RPAREN
	'''
	global symTableSt
	global symTableDict
	p[0] = {}
	p[0]['code'] = []

def p_import_spec_list(p):
	'''
	ImportSpecList : ImportSpec ImportSpecList
	               | empty
	'''
	global symTableSt
	global symTableDict
	p[0] = {}
	p[0]['code'] = []

def p_import_spec(p):
	'''
	ImportSpec       :  ImportSpecInit ImportPath
	'''
	global symTableSt
	global symTableDict
	p[0] = {}
	p[0]['code'] = []

def p_import_spec_init(p):
	'''
	ImportSpecInit : DOT
	               | IDENTIFIER
	               | empty
	'''
	global symTableSt
	global symTableDict
	p[0] = {}
	p[0]['code'] = []

def p_import_path(p):
	'''
	ImportPath     : STRINGLIT
	'''
	global symTableSt
	global symTableDict
	p[0] = {}
	p[0]['code'] = []
	scope = symTableSt[-1]
	symTable = symTableDict[scope]
	name = p[1].replace('"', '')
	entry = ImportEntry(name)
	if (symTable.put(entry) == False):
	     print("Error:", name, "redeclared on line number", p.lexer.lineno)

def p_top_level_decl_list(p):
	'''
	TopLevelDeclList : TopLevelDecl TopLevelDeclList
	                 | empty
	'''
	global symTableSt
	global symTableDict
	p[0] = {}
	p[0]['code'] = []
	if len(p)==3 and p.slice[2].type=="TopLevelDeclList" and p.slice[1].type=="TopLevelDecl":
		p[0]['code'] = p[1]['code'] + p[2]['code']

def p_top_level_decl(p):
	'''
	TopLevelDecl  : Declaration
	              | FunctionDecl
	              | MethodDecl
	              | InterfaceDecl
	              | IFuncDef
	              | StructDef
	'''
	global symTableSt
	global symTableDict
	p[0] = {}
	p[0]['code'] = []
	p[0]['code'] = p[1]['code']

def p_struct_def(p):
	'''
	StructDef : TYPE IDENTIFIER STRUCT keyword_lcurly ParameterDeclList2 keyword_rcurly
	'''
	global symTableSt
	global symTableDict
	p[0] = {}
	p[0]['code'] = []
	scope = symTableSt[-1]
	symTable = symTableDict[scope]
	struc = StructEntry(p[2])
	if (symTable.put(struc) == False):
	     print("Error:", p[2], "redeclared on line number", p.lexer.lineno)

def p_parameter_decl_list2(p):
	'''
	ParameterDeclList2  : ParameterDecl2 ParameterDeclList2
	                    | empty
	'''
	global symTableSt
	global symTableDict
	p[0] = {}
	p[0]['code'] = []

def p_parameter_decl2(p):
	'''
	ParameterDecl2  : IdentifierList1 Type
	'''
	global symTableSt
	global symTableDict
	p[0] = {}
	p[0]['code'] = []

def p_parameter_dec_list2(p):
	'''
	ParameterDecList2 : ParameterDecl2 ParameterDecList2
	                  | empty
	'''
	global symTableSt
	global symTableDict
	p[0] = {}
	p[0]['code'] = []

def p_parameter_decl2(p):
	'''
	ParameterDecl2 : IdentifierList1 Type
	'''
	global symTableSt
	global symTableDict
	p[0] = {}
	p[0]['code'] = []

def p_interface_decl(p):
	'''
	InterfaceDecl : TYPE IDENTIFIER INTERFACE interfaceBlock
	'''
	global symTableSt
	global symTableDict
	p[0] = {}
	p[0]['code'] = []
	scope = symTableSt[-1]
	symTable = symTableDict[scope]
	interfc = InterfaceEntry(p[2])
	if (symTable.put(interfc) == False):
	    print("Error:", p[2], "redeclared on line number", p.lexer.lineno)

def p_interface_block(p):
	'''
	interfaceBlock  : keyword_lcurly IFuncDecList keyword_rcurly
	'''
	global symTableSt
	global symTableDict
	p[0] = {}
	p[0]['code'] = []

def p_i_func_dec_list(p):
	'''
	IFuncDecList   : IFuncDec IFuncDecList
	               | empty
	'''
	global symTableSt
	global symTableDict
	p[0] = {}
	p[0]['code'] = []

def p_i_func_dec(p):
	'''
	IFuncDec      : IDENTIFIER LPAREN RPAREN Type
	'''
	global symTableSt
	global symTableDict
	p[0] = {}
	p[0]['code'] = []
	scope = symTableSt[-1]
	symTable = symTableDict[scope]
	fn = FuncEntry(p[1])
	if (symTable.put(fn) == False):
	    print("Error:", p[1], "redeclared on line number", p.lexer.lineno)

def p_i_func_def(p):
	'''
	IFuncDef      : FUNC LPAREN IDENTIFIER IDENTIFIER RPAREN IFuncDec Block
	'''
	global symTableSt
	global symTableDict
	p[0] = {}
	p[0]['code'] = []

def p_block(p):
	'''
	Block : keyword_lcurly StatementList keyword_rcurly
	'''
	global symTableSt
	global symTableDict
	p[0] = {}
	p[0]['code'] = []
	p[0]['code'] = p[2]['code']

def p_statement_list(p):
	'''
	StatementList : Statement StatementList
	              | empty
	'''
	global symTableSt
	global symTableDict
	p[0] = {}
	p[0]['code'] = []
	if len(p)==3 and p.slice[2].type=="StatementList" and p.slice[1].type=="Statement":
		p[0]['code'] = p[1]['code'] + p[2]['code']

def p_statement(p):
	'''
	Statement : Declaration
	          | SimpleStmt
	          | ReturnStmt
	          | Block
	          | IfStmt
	          | SwitchStmt
	          | ForStmt
	          | FuncCallStmt
	          | GoFunc
	'''
	global symTableSt
	global symTableDict
	p[0] = {}
	p[0]['code'] = []
	p[0]['code'] = p[1]['code']

def p_go_func(p):
	'''
	GoFunc    : GO FUNC Parameters FunctionBody LPAREN ExpressionList RPAREN
	          | GO IDENTIFIER LPAREN ExpressionListBot RPAREN
	'''
	global symTableSt
	global symTableDict
	p[0] = {}
	p[0]['code'] = []
	if len(p)==6 and p.slice[5].type=="RPAREN" and p.slice[4].type=="ExpressionListBot" and p.slice[3].type=="LPAREN" and p.slice[2].type=="IDENTIFIER" and p.slice[1].type=="GO":
		scope = symTableSt[-1]
		symTable = symTableDict[scope]
		fn = FuncEntry(p[2])
		if (symTable.put(fn) == False):
		    print("Error:", p[2], "redeclared on line number", p.lexer.lineno)

def p_func_call_stmt(p):
	'''
	FuncCallStmt : IDENTIFIER DOT FuncCallStmt
	             | IDENTIFIER DOT FunctionName LPAREN RPAREN
	             | IDENTIFIER DOT FunctionName LPAREN ExpressionList RPAREN
	             | IDENTIFIER DOT FunctionName LPAREN ObjectMethod RPAREN
	             | FunctionName LPAREN ExpressionListBot RPAREN
	'''
	global symTableSt
	global symTableDict
	p[0] = {}
	p[0]['code'] = []
	if len(p)==4 and p.slice[3].type=="FuncCallStmt" and p.slice[2].type=="DOT" and p.slice[1].type=="IDENTIFIER":
		b = False
		for scope in symTableSt:
			if p[1] in symTableDict[scope].symbols:
				b = True
				break
		if not b:
			print("Function", p[1], "not defined on line number", p.lexer.lineno)
	if len(p)==6 and p.slice[5].type=="RPAREN" and p.slice[4].type=="LPAREN" and p.slice[3].type=="FunctionName" and p.slice[2].type=="DOT" and p.slice[1].type=="IDENTIFIER":
		b = False
		for scope in symTableSt:
			if p[1] in symTableDict[scope].symbols:
				b = True
				break
		if not b:
			print("Function", p[1], "not defined on line number", p.lexer.lineno)
	if len(p)==7 and p.slice[6].type=="RPAREN" and p.slice[5].type=="ExpressionList" and p.slice[4].type=="LPAREN" and p.slice[3].type=="FunctionName" and p.slice[2].type=="DOT" and p.slice[1].type=="IDENTIFIER":
		b = False
		for scope in symTableSt:
			if p[1] in symTableDict[scope].symbols:
				b = True
				break
		if not b:
			print("Function", p[1], "not defined on line number", p.lexer.lineno)
	if len(p)==7 and p.slice[6].type=="RPAREN" and p.slice[5].type=="ObjectMethod" and p.slice[4].type=="LPAREN" and p.slice[3].type=="FunctionName" and p.slice[2].type=="DOT" and p.slice[1].type=="IDENTIFIER":
		b = False
		for scope in symTableSt:
			if p[1] in symTableDict[scope].symbols:
				b = True
				break
		if not b:
			print("Function", p[1], "not defined on line number", p.lexer.lineno)
	if len(p)==5 and p.slice[4].type=="RPAREN" and p.slice[3].type=="ExpressionListBot" and p.slice[2].type=="LPAREN" and p.slice[1].type=="FunctionName":
		b = False
		for scope in symTableSt:
		  if p[1]['func_name'] in symTableDict[scope].symbols:
		    b = True
		    table = symTableDict[scope]
		    break
		if not b:
			print("Function", p[1]['func_name'], "not defined on line number", p.lexer.lineno)
		entry = table.get(p[1]['func_name'])
		if entry.getInputArgs() != p[3]['typelist']:
		   print("Function", p[1]['func_name'], "arguments mismatch at line num", p.lexer.lineno)

def p_object_method(p):
	'''
	ObjectMethod : IDENTIFIER DOT IDENTIFIER LPAREN ParameterDeclList2 RPAREN
	'''
	global symTableSt
	global symTableDict
	p[0] = {}
	p[0]['code'] = []

def p_declaration(p):
	'''
	Declaration : ConstDecl
	            | TypeDecl
	            | VarDecl
	'''
	global symTableSt
	global symTableDict
	p[0] = {}
	p[0]['code'] = []
	p[0]['code'] = p[1]['code']

def p_const_decl(p):
	'''
	ConstDecl  : CONST ConstSpecTopList
	'''
	global symTableSt
	global symTableDict
	p[0] = {}
	p[0]['code'] = []

def p_const_spec_top_list(p):
	'''
	ConstSpecTopList : ConstSpec
	                 | LPAREN ConstSpecList RPAREN
	'''
	global symTableSt
	global symTableDict
	p[0] = {}
	p[0]['code'] = []

def p_const_spec_list(p):
	'''
	ConstSpecList : ConstSpec ConstSpecList
	              | empty
	'''
	global symTableSt
	global symTableDict
	p[0] = {}
	p[0]['code'] = []

def p_const_spec(p):
	'''
	ConstSpec : IdentifierList1 ConstSpecTail
	'''
	global symTableSt
	global symTableDict
	p[0] = {}
	p[0]['code'] = []
	scope = symTableSt[-1]
	symTable = symTableDict[scope]
	if (len(p[1]['idlist']) != len(p[2]['namelist'])):
		print("Length mismatch on line number", p.lexer.lineno)
		return
	p[0]['code'] = p[1]['code'] + p[2]['code']
	for i,j,k in zip(p[1]['idlist'], p[2]['namelist'], p[2]['typelist']):
	    p[0]['code'] += [i + ' := ' + j]
	    var = VarEntry(i)
	    var.setType(k)
	    if (symTable.put(var) == False):
	      print("Error:", i, "redeclared on line number", p.lexer.lineno)

def p_const_spec_tail(p):
	'''
	ConstSpecTail : TypeTop EQ ExpressionList
	              | empty
	'''
	global symTableSt
	global symTableDict
	p[0] = {}
	p[0]['code'] = []
	if len(p)==4 and p.slice[3].type=="ExpressionList" and p.slice[2].type=="EQ" and p.slice[1].type=="TypeTop":
		p[0]['namelist'] = p[3]['namelist']
		p[0]['typelist'] = p[3]['typelist']

def p_type_top(p):
	'''
	TypeTop : Type
	        | empty
	'''
	global symTableSt
	global symTableDict
	p[0] = {}
	p[0]['code'] = []

def p_identifier_list1(p):
	'''
	IdentifierList1 : IDENTIFIER IdentifierBotList1
	'''
	global symTableSt
	global symTableDict
	p[0] = {}
	p[0]['code'] = []
	p[0]['idlist'] = [p[1]] + p[2]['idlist']

def p_identifier_bot_list1(p):
	'''
	IdentifierBotList1 :  IdentifierBotList1 COMMA IDENTIFIER
	                  | empty
	'''
	global symTableSt
	global symTableDict
	p[0] = {}
	p[0]['code'] = []
	if len(p)==4 and p.slice[3].type=="IDENTIFIER" and p.slice[2].type=="COMMA" and p.slice[1].type=="IdentifierBotList1":
		p[0]['idlist'] = [p[1]] + p[2]['idlist']
	if len(p)==2 and p.slice[1].type=="empty":
		p[0]['idlist'] = []

def p_identifier_list2(p):
	'''
	IdentifierList2 : IDENTIFIER IdentifierBotList2
	'''
	global symTableSt
	global symTableDict
	p[0] = {}
	p[0]['code'] = []
	b = False
	for scope in symTableSt:
		if p[1] in symTableDict[scope].symbols:
			b = True
			break
	if not b:
		print("Error:", p[1], "not defined on line number", p.lexer.lineno)
	p[0]['idlist'] = [p[1]] + p[2]['idlist']

def p_identifier_list3(p):
	'''
	IdentifierList3 : IDENTIFIER IdentifierBotList3
	'''
	global symTableSt
	global symTableDict
	p[0] = {}
	p[0]['code'] = []
	p[0]['idlist'] = [p[1]] + p[2]['idlist']

def p_identifier_bot_list3(p):
	'''
	IdentifierBotList3 :  IdentifierBotList2 COMMA IDENTIFIER
	                  | empty
	'''
	global symTableSt
	global symTableDict
	p[0] = {}
	p[0]['code'] = []
	p[0]['idlist'] = []
	if len(p)==4 and p.slice[3].type=="IDENTIFIER" and p.slice[2].type=="COMMA" and p.slice[1].type=="IdentifierBotList2":
		p[0]['idlist'] = [p[3]] + p[1]['idlist']
	if len(p)==2 and p.slice[1].type=="empty":
		p[0]['idlist'] = []

def p_identifier_bot_list2(p):
	'''
	IdentifierBotList2 :  IdentifierBotList2 COMMA IDENTIFIER
	                  | empty
	'''
	global symTableSt
	global symTableDict
	p[0] = {}
	p[0]['code'] = []
	p[0]['idlist'] = []
	if len(p)==4 and p.slice[3].type=="IDENTIFIER" and p.slice[2].type=="COMMA" and p.slice[1].type=="IdentifierBotList2":
		b = False
		for scope in symTableSt:
			if p[3] in symTableDict[scope].symbols:
				b = True
				break
		if not b:
			print("Error:", p[3], "not defined on line number", p.lexer.lineno)
		p[0]['idlist'] = [p[3]] + p[1]['idlist']
	if len(p)==2 and p.slice[1].type=="empty":
		p[0]['idlist'] = []

def p_id_or_array_elem_list(p):
	'''
	IdOrArrayElemList : IdOrArrayElem IdOrArrayElemBotList
	'''
	global symTableSt
	global symTableDict
	p[0] = {}
	p[0]['code'] = []
	p[0]['idlist'] = [p[1]['id']] + p[2]['idlist']
	p[0]['idxlists'] = [p[1]['idxlist']] + p[2]['idxlists']
	p[0]['code'] = p[1]['code'] + p[2]['code']

def p_id_or_array_elem_bot_list(p):
	'''
	IdOrArrayElemBotList : IdOrArrayElemBotList COMMA IdOrArrayElem
	                      | empty
	'''
	global symTableSt
	global symTableDict
	p[0] = {}
	p[0]['code'] = []
	if len(p)==4 and p.slice[3].type=="IdOrArrayElem" and p.slice[2].type=="COMMA" and p.slice[1].type=="IdOrArrayElemBotList":
		p[0]['idlist'] = p[1]['idlist'] + [p[3]['id']]
		p[0]['idxlists'] = p[1]['idxlists'] + [p[3]['idxlist']]
		p[0]['code'] = p[1]['code'] + p[3]['code']
	if len(p)==2 and p.slice[1].type=="empty":
		p[0]['idlist'] = []
		p[0]['idxlists'] = []

def p_id_or_array_elem(p):
	'''
	IdOrArrayElem : IDENTIFIER MoreDims
	'''
	global symTableSt
	global symTableDict
	p[0] = {}
	p[0]['code'] = []
	p[0]['id'] = p[1]
	p[0]['idxlist'] = p[2]['idxlist']
	p[0]['code'] = p[2]['code']

def p_more_dims(p):
	'''
	MoreDims : LSQUARE Expression RSQUARE MoreDims
	           | empty
	'''
	global symTableSt
	global symTableDict
	p[0] = {}
	p[0]['code'] = []
	if len(p)==5 and p.slice[4].type=="MoreDims" and p.slice[3].type=="RSQUARE" and p.slice[2].type=="Expression" and p.slice[1].type=="LSQUARE":
		p[0]['idxlist'] = [p[2]['place']] + p[4]['idxlist']
		p[0]['code'] = p[2]['code'] + p[4]['code']
	if len(p)==2 and p.slice[1].type=="empty":
		p[0]['idxlist']  = []

def p_expression_list(p):
	'''
	ExpressionList :  Expression ExpressionBotList
	'''
	global symTableSt
	global symTableDict
	p[0] = {}
	p[0]['code'] = []
	p[0]['namelist'] = [p[1]['place']] + p[2]['namelist']
	p[0]['typelist'] = [p[1]['type']] + p[2]['typelist']
	p[0]['code'] = p[1]['code'] + p[2]['code']

def p_expression_bot_list(p):
	'''
	ExpressionBotList : ExpressionBotList COMMA Expression
	                  | empty
	'''
	global symTableSt
	global symTableDict
	p[0] = {}
	p[0]['code'] = []
	if len(p)==4 and p.slice[3].type=="Expression" and p.slice[2].type=="COMMA" and p.slice[1].type=="ExpressionBotList":
		p[0]['namelist'] = [p[3]['place']] + p[1]['namelist']
		p[0]['typelist'] = p[1]['typelist'] + [p[3]['type']]
		p[0]['code'] = p[1]['code'] + p[3]['code']
	if len(p)==2 and p.slice[1].type=="empty":
		p[0]['namelist'] = []
		p[0]['typelist'] = []

def p_type_decl(p):
	'''
	TypeDecl : TYPE TypeSpecTopList
	'''
	global symTableSt
	global symTableDict
	p[0] = {}
	p[0]['code'] = []

def p_type_spec_top_list(p):
	'''
	TypeSpecTopList : TypeSpec
	                | LPAREN TypeSpecList  RPAREN
	'''
	global symTableSt
	global symTableDict
	p[0] = {}
	p[0]['code'] = []

def p_type_spec_list(p):
	'''
	TypeSpecList : TypeSpec TypeSpecList SEMICOLON
	             | empty
	'''
	global symTableSt
	global symTableDict
	p[0] = {}
	p[0]['code'] = []

def p_type_spec(p):
	'''
	TypeSpec : AliasDecl
	         | TypeDef
	'''
	global symTableSt
	global symTableDict
	p[0] = {}
	p[0]['code'] = []

def p_alias_decl(p):
	'''
	AliasDecl : IDENTIFIER EQ Type
	'''
	global symTableSt
	global symTableDict
	p[0] = {}
	p[0]['code'] = []

def p_type_def(p):
	'''
	TypeDef : IDENTIFIER Type
	'''
	global symTableSt
	global symTableDict
	p[0] = {}
	p[0]['code'] = []
	scope = symTableSt[-1]
	symTable = symTableDict[scope]
	var = VarEntry(p[1])
	var.setDim(p[2]['dim'])
	var.setDimRanges(p[2]['dimrange'])
	if (symTable.put(var) == False):
	    print("Error:", p[1], "redeclared on line number", p.lexer.lineno)

def p_type(p):
	'''
	Type : TypeName
	     | TypeLit
	     | LPAREN Type RPAREN
	'''
	global symTableSt
	global symTableDict
	p[0] = {}
	p[0]['code'] = []
	p[0]['dims'] = 0
	p[0]['dimrange'] = []
	if len(p)==2 and p.slice[1].type=="TypeName":
		p[0]['type'] = p[1]['type']
	if len(p)==2 and p.slice[1].type=="TypeLit":
		p[0]['type'] = p[1]['type']
		p[0]['dims'] = p[1]['dims']
		p[0]['dimrange'] = p[1]['dimrange']
	if len(p)==4 and p.slice[3].type=="RPAREN" and p.slice[2].type=="Type" and p.slice[1].type=="LPAREN":
		p[0]['type'] = p[2]['type']

def p_type_name(p):
	'''
	TypeName  : IDENTIFIER
	          | QualifiedIdent
	'''
	global symTableSt
	global symTableDict
	p[0] = {}
	p[0]['code'] = []
	if len(p)==2 and p.slice[1].type=="IDENTIFIER":
		p[0]['type'] = p[1]
	if len(p)==2 and p.slice[1].type=="QualifiedIdent":
		p[0]['type'] = p[1]['type']

def p_qualified_ident(p):
	'''
	QualifiedIdent : IDENTIFIER DOT IDENTIFIER
	'''
	global symTableSt
	global symTableDict
	p[0] = {}
	p[0]['code'] = []
	p[0]['type'] = verifyCalType(p[3], p.lexer.lineno)

def p_type_lit(p):
	'''
	TypeLit  : ArrayType
	         | StructType
	         | FunctionType
	'''
	global symTableSt
	global symTableDict
	p[0] = {}
	p[0]['code'] = []
	p[0]['type'] = p[1]['type']
	if len(p)==2 and p.slice[1].type=="ArrayType":
		p[0]['dims'] = p[1]['dims']
		p[0]['dimrange'] = p[1]['dimrange']

def p_array_type(p):
	'''
	ArrayType  : LSQUARE ArrayLength RSQUARE ElementType
	'''
	global symTableSt
	global symTableDict
	p[0] = {}
	p[0]['code'] = []
	if p[2]['type'] != "int" and p[2]['type'] != '':
		print("Array index error on line number", p.lexer.lineno)
	p[0]['type'] = p[4]['type']
	p[0]['dims'] = 1 + p[4]['dims']
	p[0]['dimrange'] = [p[2]] + p[4]['dimrange']

def p_array_length(p):
	'''
	ArrayLength : Expression
	            | empty
	'''
	global symTableSt
	global symTableDict
	p[0] = {}
	p[0]['code'] = []
	if len(p)==2 and p.slice[1].type=="Expression":
		p[0]['type'] = p[1]['type']
	if len(p)==2 and p.slice[1].type=="empty":
		p[0]['type'] = ''
